# axum-template

./: .envrc  .gitignore  Cargo.toml
crates/database/: Cargo.toml
crates/database/src/: config.rs  error.rs  lib.rs  result.rs  value.rs
crates/database/src/types/: datetime.rs  mod.rs
crates/livereload/: Cargo.toml
crates/livereload/src/: inject.rs  lib.rs  overlay.rs
crates/pagination/: Cargo.toml
crates/pagination/src/: lib.rs
crates/results/: Cargo.toml
crates/styles/: Cargo.toml
crates/styles/src/: lib.rs
public/css/: global.css
public/errors/: 404.html
src/: lib.rs  main.rs  router.rs
