[package]
name = "livereload"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
http = "0.2.8"
http-body = "0.4.5"
tower = {workspace = true}
tokio = {workspace = true}
pin-project-lite = "0.2.9"
