[package]
name = "results"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxide = {workspace = true}
anyhow = {workspace = true}
thiserror = {workspace = true}
axum = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
derive_more = {workspace = true}