[package]
name = "styles"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxide = {workspace = true}
anyhow = {workspace = true}
axum = {workspace = true}
axum-extra = {workspace = true}
grass = {workspace = true}
results = {path = "../results"}
